# WaveSimulator

./: CMakeLists.txt  Makefile  README.md  app_state.cpp  app_state.h  main.cpp
camera_handlers/: sliding_window.cpp
file_handlers/: file_input.cpp  file_io.h  file_output.cpp
input_handlers/: user_input.cpp
waves_math/: double_half_rectified_sinus_signal.cpp  double_half_rectified_sinus_signal.h  gaussian_noise.cpp  gaussian_noise.h  impulse_noise.cpp  impulse_noise.h  signal.cpp  signal.h  single_half_rectified_sinus_signal.cpp  single_half_rectified_sinus_signal.h  sinus_signal.cpp  sinus_signal.h  square_wave_signal.cpp  square_wave_signal.h  symmetrical_square_wave_signal.cpp  symmetrical_square_wave_signal.h  triangular_wave_signal.cpp  triangular_wave_signal.h  uniform_distributed_noise.cpp  uniform_distributed_noise.h  unit_impulse.cpp  unit_impulse.h  unit_step.cpp  unit_step.h
window_handlers/: draw_window.cpp  draw_window.h  file_dialog.cpp  file_dialog.h  histogram_plot.cpp  histogram_plot.h  left_panel.cpp  left_panel.h  signal_plot.cpp  signal_plot.h  ui_font.cpp  ui_font.h  ui_widgets.cpp  ui_widgets.h
